feat(mcp): Add configurable storage path via environment variable
Added support for MEMOBRAIN_STORAGE_PATH environment variable to configure
where memory sessions are persisted. This enables flexible deployment
scenarios where the memory storage location needs to differ from the default.

Changes:
- src/mcp_server.py: Added _get_default_storage_path() function that reads
  MEMOBRAIN_STORAGE_PATH from environment, falling back to default path
  if not set
- .env.example: Documented the new variable with usage examples for
  relative paths, absolute paths, and parent directory references

This is particularly useful when MemoBrain is used as a submodule in a
larger project and memory needs to be stored in the parent project's
output directory rather than locally.

Configuration examples:
  MEMOBRAIN_STORAGE_PATH=../_bmad-output/memory  # Parent project
  MEMOBRAIN_STORAGE_PATH=/var/data/memobrain     # Absolute path
  MEMOBRAIN_STORAGE_PATH=./data/memory           # Local folder

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,14 @@ ZAI_BASE_URL=https://api.z.ai/api/anthropic
 # - GLM-4.5-Air : Fast, cheap (recommended for testing)
 # - GLM-4.7     : Best quality (recommended for production)
 ZAI_MODEL=GLM-4.5-Air
+
+# Memory Storage Path
+# Path where memory sessions are persisted as JSON files
+# Can be relative (to memobrain/ directory) or absolute
+# Default: ./_bmad-output/memory
+#
+# Examples:
+#   MEMOBRAIN_STORAGE_PATH=../_bmad-output/memory   # Parent project's output folder
+#   MEMOBRAIN_STORAGE_PATH=/var/data/memobrain      # Absolute path
+#   MEMOBRAIN_STORAGE_PATH=./data/memory            # Local to memobrain folder
+MEMOBRAIN_STORAGE_PATH=../_bmad-output/memory
